--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,3 +1,7 @@
-appname = book
+appname = bookapi
 httpport = 8080
 runmode = dev
+autorender = false
+copyrequestbody = true
+EnableDocs = true
+sqlconn = 
